# spritely

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: update-tauri-version.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  untitled.spr
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/PixelCanvas/: main.ts
src/components/: Brushes.tsx  Colors.tsx  CreateSprite.tsx  CreateSpriteForm.tsx  ExportSpriteForm.tsx  Layout.tsx  Nav.tsx  NoSpriteError.tsx
src/components/Editor/: Brushes.tsx  Colors.tsx  Editor.tsx  EditorLayout.tsx  Frames.tsx  Nav.tsx
src/components/editor/: Animation.tsx  Brushes.tsx  Colors.tsx  Editor.tsx
src/components/ui/: menubar.tsx
src/lib/: composite.ts  types.ts  utils.ts
src/stores/: brushStore.ts  colorStore.ts  spriteStore.ts  store.ts
src/types/: sprite.ts
