[package]
name = "spritely"
version = "0.5.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"

[lib]
name = "spritely_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies]
[build-dependencies.tauri-build]
version = "2"
features = []

[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"
tauri-plugin-dialog = "2"
image = "0.25.6"

[dependencies.tauri]
version = "2"
features = []

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.tokio]
version = "1"
features = [ "full" ]
